fix: labyrinth overflow

--- a/WEB/src/scss/global.scss
+++ b/WEB/src/scss/global.scss
@@ -41,7 +41,9 @@ nav {
 main {
     height: 100%;
     display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
+}
+
+#labyrinth {
+    overflow: auto;
+    margin: auto;
 }
